# AiChemistForge

./: .gitignore  CLAUDE.md  README.md  mcp.example.json
.claude/: settings.local.json
.gemini/: settings.json
ToolRack/Rust/: Cargo.toml  README.md  build_mcp_server.bat  error.txt  forbidden_dirs.txt  start_mcp_server.bat  start_mcp_server_http.bat
ToolRack/Rust/docs/: BLOCKLIST_CHANGES.md  BLOCKLIST_FIX_SUMMARY.md  BLOCKLIST_MANAGEMENT.md  CHANGES_SUMMARY.md  OPTIMIZATION_CHANGES.md  QUICKSTART.md  RAG_ENHANCEMENT_RESEARCH.md  RETRY_SYSTEM.md
ToolRack/Rust/examples/: blocklist_example.rs
ToolRack/Rust/src/: cli.rs  error.rs  fs_service.rs  handler.rs  lib.rs  main.rs  mcp_types.rs  retry.rs  server.rs  task_state.rs
ToolRack/Rust/src/fs_service/: utils.rs
ToolRack/Rust/src/tools/: calculate_directory_size.rs  copy_file.rs  create_directory.rs  delete_file.rs  directory_operations.rs  directory_tree.rs  edit_file.rs  edit_operation.rs  file_management.rs  find_duplicate_files.rs  find_empty_directories.rs  get_file_info.rs  head_file.rs  list_allowed_directories.rs  list_directory.rs  list_directory_with_sizes.rs  mod.rs  move_file.rs  multiple_file_operations.rs  operation_mode_management.rs  read_file.rs  read_file_lines.rs  read_media_file.rs  read_multiple_files.rs  read_multiple_media_files.rs  search_and_analysis.rs  search_files.rs  search_files_content.rs  single_file_operations.rs  tail_file.rs  unzip_file.rs  write_file.rs  zip_directory.rs  zip_files.rs
ToolRack/Rust/test_files/: test2.txt
ToolRack/Rust/tests/: test_blocklist.rs
(+107 files in other folders)
