[package]
authors     = [ "Ali Hashemi" ]
description = "Blazing-fast, asynchronous MCP server for seamless filesystem operations."
edition     = "2021"
name        = "aichemistforge-mcp-server"
version     = "0.1.0"

[lib]
name = "aichemistforge_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "aichemistforge-mcp-server"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = [ "full" ] }

# Serialization
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = [ "derive" ] }

# Async traits
async-trait = "0.1"

# File system operations
chrono  = { version = "0.4", features = [ "serde" ] }
dirs    = "5.0"
glob    = "0.3"
ignore  = "0.4"
regex   = "1.5"
similar = "2.2"
walkdir = "2.3"

# Simple zip without complex crypto
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }

# For searching file content
grep = "0.3"
# For hashing files to find duplicates
rayon = "1.11.0"
sha2  = "0.10.9"
# For detecting media file types
infer = "0.19.0"
# For base64 encoding media files
base64 = "0.21"

# MCP SDK for Rust
rust-mcp-sdk = "0.7"
once_cell = "1.19.0"

[dev-dependencies]
tempfile = "3.2"

[features]
default = [  ]
